# apps/api/src/modules/search/search.dto.ts
@@ -1,4 +1,9 @@
-import { parsedQuerySchema, parseQueryBodySchema } from '@smartestate/contracts';
+import {
+  hybridSearchBodySchema,
+  hybridSearchResponseSchema,
+  parseQueryBodySchema,
+  parsedQuerySchema,
+} from '@smartestate/contracts';
 import { createZodDto } from '../../common/zod/zod-dto.js';
 
 export class ParseQueryBodyDto extends createZodDto(parseQueryBodySchema, {
@@ -7,5 +12,14 @@ export class ParseQueryBodyDto extends createZodDto(parseQueryBodySchema, {
 
 export class ParsedQueryDto extends createZodDto(parsedQuerySchema, {
   name: 'ParsedQueryDto',
+  io: 'output',
+}) {}
+
+export class HybridSearchBodyDto extends createZodDto(hybridSearchBodySchema, {
+  name: 'HybridSearchBodyDto',
+}) {}
+
+export class HybridSearchResponseDto extends createZodDto(hybridSearchResponseSchema, {
+  name: 'HybridSearchResponseDto',
   io: 'output',
 }) {}
